--- a/exercises/hello/Makefile
+++ b/exercises/hello/Makefile
@@ -1,2 +1,9 @@
-test:
-	echo hello
+out.txt : hello.exe
+	mono hello.exe > out.txt
+
+hello.exe : hello.cs
+	mcs hello.cs
+
+clean:
+	rm -f out.txt hello.exe
+
