--- a/homeworks/vec/A/Makefile
+++ b/homeworks/vec/A/Makefile
@@ -1,2 +1,15 @@
-test
+all: Out.txt
+	cat Out.txt
+
+Out.txt: main.exe
+	mono main.exe > Out.txt
+
+main.exe: main.cs vec.dll
+	mcs -target:exe -out:main.exe -reference:vec.dll main.cs
+
+vec.dll: vec.cs
+	mcs -target:library -out:vec.dll vec.cs
+
+clean:
+	$(RM) *.exe *.dll [Oo]ut*.txt
 
