--- a/homeworks/plots/C/Makefile
+++ b/homeworks/plots/C/Makefile
@@ -6,9 +6,10 @@ complexgamma.gnuplot.png: erf.data.txt Makefile
 	set output "$@" \n\
 	set xlabel "$$Re(z)$$" \n\
 	set ylabel "$$Im(z)$$" \n\
-	set zlabel "$$|Gamma (z)|$$" \n\
-	set title "Complex gamma function" \n\
-	splot [-5:5] [-5:5] [0:10] "$<" index 0 using 1:2:3 with lines title "$$|\\Gamma(z)|$$" \n\
+	set zlabel "$$|Gamma(z)|$$" \n\
+	set title "Gamma function" \n\
+	set key below \n\
+	splot [-5: 5] [-5: 5] [0: 6] "$<" index 0 using 1:2:3 with lines title "Gamma function" \n\
 	'| tee log.gpi | gnuplot
 
 erf.data.txt: main.exe
