--- a/homeworks/splines/A/Makefile
+++ b/homeworks/splines/A/Makefile
@@ -9,7 +9,7 @@ fig.png: data.txt Makefile
 	set ylabel "y" \n\
 	set key out \n\
 	plot \
-	"data.txt" index 0 using 1:2 with points pointtype 6 pointsize 2 title "data" \
+	"data.txt" index 0 using 1:2 with points pointtype 5 pointsize 2 title "data" \
 	,"data.txt" index 1 using 1:2 with lines title "linterp" \
 	,"data.txt" index 1 using 1:3 with lines title "integral"; \
 	' | tee log | gnuplot
@@ -21,7 +21,7 @@ main.exe: main.cs matlib.dll
 	mcs -target:exe -out:$@ -reference:matlib.dll $<
 
 matlib.dll: linterp.cs
-	mcs -target:library -out:./$@ $<
+	mcs -target:library -out:./$@ $^
 
 clean:
 	$(RM) *.exe *.dll *.png *.txt
