linear equations A fixed

--- a/homeworks/linearequations/A/Makefile
+++ b/homeworks/linearequations/A/Makefile
@@ -4,13 +4,16 @@ all: out.txt
 out.txt: main.exe qrgs.cs
 	mono $< > out.txt
 
-main.exe: main.cs qrgs.dll  math.dll
-	mcs $< -target:exe -reference:qrgs.dll -reference:math.dll
+main.exe: main.cs qrgs.dll  matrix.dll vector.dll
+	mcs $< -target:exe -reference:qrgs.dll -reference:matrix.dll -reference:vector.dll
 
-qrgs.dll: qrgs.cs math.dll
-	mcs $< -target:library -reference:math.dll
+qrgs.dll: qrgs.cs matrix.dll vector.dll
+	mcs $< -target:library -reference:matrix.dll -reference:vector.dll
 
-math.dll: matrix.cs vector.cs
+matrix.dll: matrix.cs vector.dll
+	mcs $< -target:library -reference:vector.dll
+
+vector.dll: vector.cs
 	mcs $< -target:library
 
 clean:
